# supuraisu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  vite.config.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  RELEASE.md
scripts/: prebuild-guard.mjs  probe-helper.mjs  set-version.mjs
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: probe_helper.rs
src-tauri/icons/: icon.icns
src-tauri/proto/: app.proto  electron.proto
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
