[package]
name = "supuraisu"
version = "0.1.1"
description = "A better desktop client for legitimate Splice users"
authors = ["Patrick Moriarty"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "supuraisu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.14.5", features = ["transport", "tls-ring"] }
prost = "0.14.3"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
anyhow = "1.0.102"
tonic-prost = "0.14.5"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14.1"
tower-service = "0.3.3"
hyper-util = { version = "0.1.20", features = ["tokio"] }
objc = "0.2.7"
cocoa = "0.26.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
keyring = { version = "3.6.3", features = ["apple-native"] }
rand = "0.8.5"
sha2 = "0.10.9"
base64 = "0.22.1"
url = "2.5.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

